--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '25.0.0'
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "io.github.luizgrp.sectionedrecyclerviewadapter.demo"
