--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,11 @@ android:
     - extra-android-m2repository
     - extra-google-m2repository
 
-script:
-  ./gradlew build
-
 before_install:
-- yes | sdkmanager "platforms;android-28"
+  - yes | sdkmanager "platforms;android-28"
+
+script:
+  ./gradlew build jacocoTestReport
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
